tests/files/lexer_tests/should_fail/011.cmdr
// Illegal character in string (ascii 11)
var = ''